# ctd_ingest

./: LICENSE  README.rst  chemical_to_disease.py  chemical_to_disease.yaml  chemical_to_gene.py  chemical_to_gene.yaml  download.yaml  neo-transform.yaml  pyproject.toml
ctd_ingest/: cli_utils.py  load_neo.py  main.py
ingests/chemical-to-disease/: chemical_to_disease.yaml
ingests/ctd_chemical_to_gene/: ctd_chemical_to_gene.py  ctd_chemical_to_gene.yaml
