[tool.poetry]
name = "ctd_ingest"
version = "0.1.0"
description = ""
authors = ["Sierra Taylor Moxon <sierra.taylor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
koza = "^0.1.5"
kghub_downloader = "^0.1.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
