[tool.poetry]
name = "ctd_ingest"
version = "0.1.0"
description = ""
authors = ["Sierra Taylor Moxon <sierra.taylor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
koza = "*"
kghub_downloader = "*"
kgx = "*"
plater-graph = "*"
cat-merge = "^0.1.10"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
